--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,17 @@ body {
   
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
+a {
+  text-decoration: none;
+  color:inherit;
+
+
+}
 
 .header-bg {
   background-color: #000;
@@ -35,7 +46,6 @@ body {
 .header-menu a {
   display: inline-block;
   padding: 16px 0px;
-  text-decoration: none;
   color: #fff;
   font-family: Poppins;
   font-size: 18px;
@@ -60,7 +70,71 @@ body {
   width: 100%;
   
 }
+
+.introducao-bg {
+  background-color: #000;
+  color: #fff;
+}
+
+
+.introducao {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+  box-sizing: border-box;
+  max-width: 1200px;
+  /* padding-left: 20px; */
+  /* padding-right: 20px; */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.introducao-conteudo {
+  align-self: end;
+  padding-bottom: 80px;
+
+}
+
+.introducao h1 {
+  font-family: Poppins;
+  font-weight: 600;
+  font-size: 64px;
+  margin-bottom: 32px;
+  line-height: 1.125;
+
+}
+
+.introducao p {
+  font-family: 'Poppins';
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 1.50;
+  color: #B7B7B7;
+  margin-bottom: 20px;
+
+}
+
+.introducao span {
+  color: #FFBB00;
+}
+
+
+.introducao a {
+  display: inline-block;
+  padding: 16px 32px;
+  background: #FFBB00;
+  text-transform: uppercase;
+  font-family: roboto;
+  color: #111;
+  border-radius: 5px;
+  font-weight: bold;
   
+}
+
+.introducao a:hover {
+  background: linear-gradient( #FFC700 , #cf9a06 ); 
+
+}
 
 
 @media (max-width: 800px) {
