--- a/css/header.css
+++ b/css/header.css
@@ -26,7 +26,7 @@ a {
 }
 
 .header-bg {
-  background-color: #000;
+  background-color: var(--cor-12);
   padding-bottom: 80px;
 }
 
@@ -52,10 +52,10 @@ a {
 .header-menu a {
   display: inline-block;
   padding: 16px 0px;
-  color: #fff;
+  color: var(--cor-0);
   font-family: 'Poppins';
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 32px;
   position: relative;
 }
@@ -65,7 +65,7 @@ a {
   display: block;
   width: 0px;
   height: 2px;
-  background-color: #fff;
+  background-color: var(--cor-0);
   transition: 1s;
   position: absolute;
 
@@ -88,14 +88,14 @@ a {
   }
 
  .header-menu a {
-  background-color: #111111;
+  background-color: var(--cor-11);
   padding: 12px 16px;
   border-radius: 4px;
 
  }
 
  .header-menu a:hover {
- background-color: #2e2e2e;
+ background-color: var(--cor-10);
  }
 
  .header a:after {
