--- a/css/style.css
+++ b/css/style.css
@@ -1,236 +1,9 @@
+@import './global.css';
 @import './header.css';
 @import './introducao.css';
 
+@import './utilidades/tipografia.css';
+@import './utilidades/utilidades.css';
+@import './utilidades/cores.css';
 
-
-body {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-  height: 2000px;
-  
-
-}
-
-*, h1, p {
-  padding: 0px;
-  margin: 0px;
-  
-}
-
-img {
-  max-width: 100%;
-  display: block;
-
-}
-
-a {
-  text-decoration: none;
-  color:inherit;
-
-
-}
-
-.header-bg {
-  background-color: #000;
-  padding-bottom: 80px;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 20px;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-
-  
-}
-
-.header-menu {
-  display: flex;
-  gap: 40px;
-}
-
-.header-menu a {
-  display: inline-block;
-  padding: 16px 0px;
-  color: #fff;
-  font-family: 'Poppins';
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 32px;
-  position: relative;
-}
-
-.header-menu a:after {
-  content: "";
-  display: block;
-  width: 0px;
-  height: 2px;
-  background-color: #fff;
-  transition: 1s;
-  position: absolute;
-
-}
-
-.header-menu a:hover::after {
-  height: 2px;
-  width: 100%;
-  
-}
-
-.introducao-bg {
-  background-color: #000;
-  color: #fff;
-  box-shadow: inset 0 -120px #fff;
-  
-}
-
-
-.introducao img {
-  height: 100%;
-  margin-bottom: -120px;
-  object-fit: cover;
-  border-radius: 4px;
-
-}
-
-.introducao {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-left: 20px; 
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
-    
- 
-}
-
-.introducao-conteudo {
-  align-self: end;
-  padding-bottom: 200px;
-  
-
-}
-
-.introducao h1 {
-  font-family: 'Poppins';
-  font-weight: 600;
-  font-size: 64px;
-  margin-bottom: 32px;
-  line-height: 1.125;
-  
-
-}
-
-.introducao p {
-  font-family: 'Poppins';
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 1.50;
-  color: #B7B7B7;
-  margin-bottom: 20px;
-
-}
-
-.introducao span {
-  color: #FFBB00;
-}
-
-
-.introducao a {
-  display: inline-block;
-  padding: 16px 32px;
-  background: #FFBB00;
-  text-transform: uppercase;
-  font-family: roboto;
-  color: #111;
-  font-size: 18px;
-  line-height: 1.33;
-  border-radius: 5px;
-  font-weight: bold;
-  
-}
-
-.introducao a:hover {
-  background: linear-gradient( #FFC700 , #e4be00 ); 
-
-}
-
-
-@media (max-width: 800px) {
-  .header {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 40px;
-  }
-
- .header-menu a {
-  background-color: #111111;
-  padding: 12px 16px;
-  border-radius: 4px;
-
- }
-
- .header-menu a:hover {
- background-color: #2e2e2e;
- }
-
- .header a:after {
-  display: none;
- }
-}
-
-@media (max-width: 600px) {
-  .introducao a {
-    padding: 12px 16px;
-    font-size: 16px;
-
-    
-
-  }
-
-}
-
-@media (max-width: 1200px) {
-  .introducao h1 {
-    font-size: 72px;
-
-  }
-  .introducao p {
-    font-size: 26px;
-    
-  }
-
-}
-
-@media (max-width: 800px) {
-  .introducao {
-    grid-template-columns: 1fr;
-    gap: 32px;
-    padding-top: 40px;
-    background-color: #111111;
-  }
-  .introducao-conteudo {
-    padding-bottom: 0px;
-  }
-  .introducao h1 {
-    font-size: 42px;
-    margin-bottom: 32px;
-  }
-  .introducao p {
-    font-size: 18px;
-  }
-  .introducao img {
-    height: 300px;
-    width: 100%;
-
-  }
-}
+@import '/bicicletas/bicicletas-lista.css'
