--- a/css/home/header.css
+++ b/css/home/header.css
@@ -1,7 +1,8 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  height: 2000px;
+  height: 0px;
+  
   
 
 }
@@ -36,10 +37,10 @@ a {
   flex-wrap: wrap;
   align-items: center;
   gap: 20px;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
+  
 
   
 }
@@ -47,12 +48,13 @@ a {
 .header-menu {
   display: flex;
   gap: 40px;
+
 }
 
 .header-menu a {
   display: inline-block;
   padding: 16px 0px;
-  color: var(--cor-0);
+  color: var(--cor-01);
   font-family: 'Poppins';
   font-size: 18px;
   font-weight: 400;
@@ -65,13 +67,14 @@ a {
   display: block;
   width: 0px;
   height: 2px;
-  background-color: var(--cor-0);
+  background-color: var(--cor-01);
   transition: 1s;
   position: absolute;
 
 }
 
-.header-menu a:hover::after {
+.header-menu a:hover::after,
+.header-menu a.ativo::after {
   height: 2px;
   width: 100%;
   
@@ -86,6 +89,9 @@ a {
     flex-wrap: wrap;
     gap: 40px;
   }
+
+
+
 
  .header-menu a {
   background-color: var(--cor-11);
