--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,11 +1,7 @@
-
-
-
-
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  height: 2000px;
+  height: 0px;
   
 
 }
@@ -38,6 +34,7 @@ a {
 
 
 .introducao img {
+  width: 100%;
   height: 100%;
   margin-bottom: -120px;
   object-fit: cover;
@@ -49,13 +46,7 @@ a {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-left: 20px; 
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
-    
+ 
  
 }
 
