--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,39 @@
-@import './global.css';
-@import './header.css';
-@import './introducao.css';
+ /* HOME */
+@import "global/global.css";
+@import "home/depoimento.css";
+@import "home/footer.css";
+@import "home/header.css";
+@import "home/introducao.css";
+@import "home/parceiros.css";
+@import "home/tecnologia.css";
 
-@import './utilidades/tipografia.css';
-@import './utilidades/utilidades.css';
-@import './utilidades/cores.css';
+/* UTILIDADE */
+@import "utilidades/animacao.css";
+@import "utilidades/tipografia.css";
+@import "utilidades/cores.css";
+@import "utilidades/utilidades.css";
+@import "utilidades/formulario.css";
 
-@import '/bicicletas/bicicletas-lista.css'
+/* SEGUROS */
+@import "seguros/seguros.css";
+@import "seguros/pergunta.css";
+@import "seguros/vantagens.css";
+
+/* CONTATO */
+@import "contato/contato.css";
+@import "contato/lojas.css";
+
+/* ORCAMENTO */
+@import "orcamento/orcamento.css";
+
+
+/* TERMOS E CONDIÇOES */
+@import "termos/termos.css";
+
+/* BICICLETAS */
+@import "bicicletas/seguro.css";
+@import "bicicleta/bicicleta.css";
+
+/* BICICLETAS */
+@import "./bicicletas/bicicletas-lista.css";
+@import "bicicletas/bicicletas.css";
